// Copyright (c) 2026 dilocash
// Use of this source code is governed by an MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package dilocash.v1;

option go_package = "github.com/dilocash/dilocash-oss/apps/api/internal/generated/transport/dilocash/v1";

import "dilocash/v1/sync_types.proto";

service SyncService {
  rpc PullChanges(PullChangesRequest) returns (PullChangesResponse);
  rpc PushChanges(PushChangesRequest) returns (PushChangesResponse);
}
