// Copyright (c) 2026 dilocash
// Use of this source code is governed by an MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package dilocash.v1;

option go_package = "github.com/dilocash/dilocash-oss/apps/api/internal/generated/transport/dilocash/v1";

import "google/protobuf/timestamp.proto";
import "dilocash/v1/command_types.proto";
import "dilocash/v1/intent_types.proto";
import "dilocash/v1/transaction_types.proto";

// represents the command of a financial transaction
message Changes {
  CommandsList commands = 1;
  IntentsList intents = 2;
  TransactionsList transactions = 3;
}

// request to pull changes from the server
message PullChangesRequest {
  google.protobuf.Timestamp last_pulled_at = 1;  // The checkpoint that localdb will send
  int32 schema_version = 2;
  string migration = 3;
  int32 limit = 4;            // Batch size
}

// server response with the new data
message PullChangesResponse {
  Changes changes = 1;
  google.protobuf.Timestamp timestamp = 2; // The new checkpoint for the next time
}

// request to push changes from the client
message PushChangesRequest {
  Changes changes = 1;
  google.protobuf.Timestamp last_pulled_at = 2; // the timestamp of the last successful pull (timestamp returned in pullChanges)
}

// response with the new data
message PushChangesResponse {
  // Here you could return conflicts if the server rejects a version
  bool ok = 1;
  repeated string conflict_ids = 2; 
}